# mcp-server-calculator

./: .gitignore  .mcp.json  README.md  pyproject.toml
calculator/: __init__.py  __main__.py  server.py
