[project]
name = "mcp-server-calculator"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to perform calculations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.14.3",
    "sympy>=1.14.0",
]

[project.scripts]
mcp-server-calculator = "calculator:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "calculator"
